[gd_scene load_steps=19 format=4 uid="uid://bqo7xljf58w78"]

[ext_resource type="Script" path="res://utils/General/levels.gd" id="1_l4wh4"]
[ext_resource type="Script" path="res://utils/camera/cameraUtils.gd" id="2_t7rkc"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="3_vynk8"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="4_tpwyv"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="5_v2du8"]
[ext_resource type="Script" path="res://utils/General/zone.gd" id="7_18yru"]
[ext_resource type="TileSet" uid="uid://c0eok0rh1674m" path="res://utils/tiles/tiles.tres" id="8_c2v2m"]
[ext_resource type="PackedScene" uid="uid://bd0wvt5y28nh4" path="res://objects/resetter/resetter.tscn" id="9_4n4pe"]
[ext_resource type="PackedScene" uid="uid://bnqlf15ta6jee" path="res://objects/button/button.tscn" id="10_104y3"]
[ext_resource type="PackedScene" uid="uid://v7c0dfv5ytx6" path="res://objects/eco/eco.tscn" id="11_akcor"]
[ext_resource type="Script" path="res://levels/level3/controller.gd" id="11_wb6vj"]
[ext_resource type="PackedScene" uid="uid://bs0252qb8ruos" path="res://utils/endLevel/end_level.tscn" id="12_uidn5"]
[ext_resource type="PackedScene" uid="uid://8cehj83qarr" path="res://objects/slider dooor/sliderDoor.tscn" id="13_j38i6"]
[ext_resource type="PackedScene" uid="uid://c5to1bgatcq53" path="res://objects/door/door.tscn" id="13_ykpoe"]
[ext_resource type="PackedScene" uid="uid://c6i26cm4cvd2x" path="res://objects/player/player.tscn" id="15_33vvn"]
[ext_resource type="AudioStream" uid="uid://n6hw8f2ljplr" path="res://utils/music/NaveFr√≠a.mp3" id="16_a24u0"]

[sub_resource type="Resource" id="Resource_nqjlv"]
script = ExtResource("5_v2du8")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ccd2"]
size = Vector2(165, 20)

[node name="Level3" type="Node2D" groups=["level"]]
script = ExtResource("1_l4wh4")

[node name="Camera2D" type="Camera2D" parent="." groups=["cameraGamePri"]]
position = Vector2(-112, 144)
anchor_mode = 0
zoom = Vector2(0.65, 0.65)
script = ExtResource("2_t7rkc")

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("3_vynk8")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer" groups=["blackSquare"]]
visible = false
offset_right = 1151.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="zones" type="Node2D" parent="."]

[node name="c_init" type="Node2D" parent="zones" groups=["cameraGame"]]
position = Vector2(-112, 144)
script = ExtResource("4_tpwyv")
zoom = Vector2(0.65, 0.65)
tween_resource = SubResource("Resource_nqjlv")
draw_limits = true

[node name="r_init" type="Node2D" parent="zones" node_paths=PackedStringArray("camera") groups=["zoneCmr"]]
script = ExtResource("7_18yru")
camera = NodePath("../c_init")
key = "tuto_room_init"

[node name="TileMapLayer" type="TileMapLayer" parent="zones/r_init"]
scale = Vector2(0.7, 0.7)
tile_map_data = PackedByteArray("AAAAAAAAAQABAAEAAAAAAAEAAQABAAEAAAAAAAIAAQABAAEAAAAAAAMAAQABAAEAAAAAAAQAAQABAAEAAAAAAAUAAQABAAEAAAAAAAYAAQABAAEAAAABAAAAAQABAAEAAAABAAEAAQABAAEAAAABAAIAAQABAAEAAAABAAMAAQABAAEAAAABAAQAAQABAAEAAAABAAUAAQABAAEAAAABAAYAAQABAAEAAAACAAAAAQABAAEAAAACAAEAAQABAAEAAAACAAIAAQABAAEAAAACAAMAAQABAAEAAAACAAQAAQABAAEAAAACAAUAAQABAAEAAAACAAYAAQABAAEAAAADAAAAAQABAAEAAAADAAEAAQABAAEAAAADAAIAAQABAAEAAAADAAMAAQABAAEAAAADAAQAAQABAAEAAAADAAUAAQABAAEAAAADAAYAAQABAAEAAAAEAAAAAQABAAEAAAAEAAEAAQABAAEAAAAEAAIAAQABAAEAAAAEAAMAAQABAAEAAAAEAAQAAQABAAEAAAAEAAUAAQABAAEAAAAEAAYAAQABAAEAAAAFAAAAAQABAAEAAAAFAAEAAQABAAEAAAAFAAIAAQABAAEAAAAFAAMAAQABAAEAAAAFAAQAAQABAAEAAAAFAAUAAQABAAEAAAAFAAYAAQABAAEAAAAGAAAAAQABAAEAAAAGAAEAAQABAAEAAAAGAAIAAQABAAEAAAAGAAMAAQABAAEAAAAGAAQAAQABAAEAAAAGAAUAAQABAAEAAAAGAAYAAQABAAEAAAAHAAAAAQABAAEAAAAHAAEAAQABAAEAAAAHAAIAAQABAAEAAAAHAAMAAQABAAEAAAAHAAQAAQABAAEAAAAHAAUAAQABAAEAAAAHAAYAAQABAAEAAAAIAAAAAQABAAEAAAAIAAEAAQABAAEAAAAIAAIAAQABAAEAAAAIAAMAAQABAAEAAAAIAAQAAQABAAEAAAAIAAUAAQABAAEAAAAIAAYAAQABAAEAAAAJAAAAAQABAAEAAAAJAAEAAQABAAEAAAAJAAIAAQABAAEAAAAJAAMAAQABAAEAAAAJAAQAAQABAAEAAAAJAAUAAQABAAEAAAAJAAYAAQABAAEAAAAAAAcAAQABAAEAAAAAAAgAAQABAAEAAAABAAcAAQABAAEAAAABAAgAAQABAAEAAAACAAcAAQABAAEAAAACAAgAAQABAAEAAAADAAcAAQABAAEAAAADAAgAAQABAAEAAAAEAAcAAQABAAEAAAAEAAgAAQABAAEAAAAFAAcAAQABAAEAAAAFAAgAAQABAAEAAAAGAAcAAQABAAEAAAAGAAgAAQABAAEAAAAHAAcAAQABAAEAAAAHAAgAAQABAAEAAAAIAAcAAQABAAEAAAAIAAgAAQABAAEAAAAJAAcAAQABAAEAAAAJAAgAAQABAAEAAAAKAAYAAQABAAEAAAAKAAcAAQABAAEAAAALAAYAAQABAAEAAAALAAcAAQABAAEAAAAKAAUAAQABAAEAAAALAAUAAQABAAEAAAAKAAgAAQABAAEAAAALAAgAAQABAAEAAAA=")
tile_set = ExtResource("8_c2v2m")

[node name="TileMapLayer2" type="TileMapLayer" parent="zones/r_init"]
scale = Vector2(0.7, 0.7)
tile_map_data = PackedByteArray("AAAAAAQAAgAFAAQAAAAAAAUAAgAEAAQAAAAAAAYAAgAFAAQAAAAAAAcAAgAFAAQAAAABAAUAAgAFAAUAAAAAAAAAAgAFAAQAAAAAAAEAAgAFAAQAAAAAAAIAAgAFAAQAAAAAAAMAAgAFAAQAAAADAAUAAgADAAUAAAAEAAUAAgAEAAUAAAAFAAUAAgAFAAUAAAAFAAQAAgAFAAMAAAAEAAQAAgAEAAQAAAABAAQAAgAFAAQAAAADAAQAAgADAAMAAAAAAAgAAgAEAAQAAAABAAgAAgAEAAQAAAACAAgAAgAEAAQAAAADAAgAAgAEAAQAAAAEAAgAAgAEAAQAAAAFAAgAAgAEAAQAAAAGAAgAAgAEAAQAAAAHAAgAAgAEAAQAAAAIAAgAAgAEAAQAAAAJAAgAAgADAAQAAAAIAAQAAgAEAAMAAAAJAAQAAgAEAAQAAAAHAAQAAgADAAMAAAAHAAUAAgADAAUAAAAJAAUAAgAEAAQAAAAIAAUAAgAEAAUAAAAJAAMAAgADAAQAAAAIAAIAAgAEAAUAAAAHAAIAAgADAAUAAAAFAAIAAgAFAAUAAAAEAAIAAgAEAAUAAAAFAAEAAgAFAAMAAAAEAAEAAgAEAAMAAAAJAAIAAgAEAAQAAAAHAAEAAgADAAMAAAAIAAEAAgAEAAQAAAAJAAEAAgAFAAQAAAADAAEAAgADAAQAAAADAAIAAgADAAUAAAAJAAAAAgADAAQAAAD+/wAAAgAEAAQAAAD+/wEAAgAEAAQAAAD+/wIAAgAEAAQAAAD+/wMAAgAEAAQAAAD+/wQAAgAEAAQAAAD+/wUAAgAEAAQAAAD+/wYAAgAEAAQAAAD//wAAAgAEAAQAAAD//wEAAgAEAAQAAAD//wIAAgAEAAQAAAD//wMAAgAEAAQAAAD//wQAAgAEAAQAAAD//wUAAgAEAAQAAAD//wYAAgAEAAQAAAD+/wcAAgAEAAQAAAD+/wgAAgAEAAQAAAD//wcAAgAEAAQAAAD//wgAAgAEAAQAAAAKAAMAAgAEAAQAAAAKAAQAAgAEAAQAAAAKAAUAAgAEAAQAAAAKAAgAAgAEAAQAAAALAAMAAgAEAAQAAAALAAQAAgAEAAQAAAALAAUAAgAEAAQAAAALAAYAAgADAAQAAAALAAcAAgADAAQAAAALAAgAAgAEAAQAAAAMAAMAAgAEAAQAAAAMAAQAAgAEAAQAAAAMAAUAAgAEAAQAAAAMAAYAAgAEAAQAAAAMAAcAAgAEAAQAAAAMAAgAAgAEAAQAAAANAAMAAgAEAAQAAAANAAQAAgAEAAQAAAANAAUAAgAEAAQAAAANAAYAAgAEAAQAAAANAAcAAgAEAAQAAAANAAgAAgAEAAQAAAAOAAMAAgAEAAQAAAAOAAQAAgAEAAQAAAAOAAUAAgAEAAQAAAAOAAYAAgAEAAQAAAAOAAcAAgAEAAQAAAAOAAgAAgAEAAQAAAAPAAMAAgAEAAQAAAAPAAQAAgAEAAQAAAAPAAUAAgAEAAQAAAAPAAYAAgAEAAQAAAAPAAcAAgAEAAQAAAAPAAgAAgAEAAQAAAAKAAAAAgAEAAQAAAAKAAEAAgAEAAQAAAAKAAIAAgAEAAQAAAALAAAAAgAEAAQAAAALAAEAAgAEAAQAAAALAAIAAgAEAAQAAAAMAAAAAgAEAAQAAAAMAAEAAgAEAAQAAAAMAAIAAgAEAAQAAAANAAAAAgAEAAQAAAANAAEAAgAEAAQAAAANAAIAAgAEAAQAAAAOAAAAAgAEAAQAAAAOAAEAAgAEAAQAAAAOAAIAAgAEAAQAAAAPAAAAAgAEAAQAAAAPAAEAAgAEAAQAAAAPAAIAAgAEAAQAAAABAAEAAgAFAAUAAAABAAAAAgAFAAQAAAA=")
tile_set = ExtResource("8_c2v2m")

[node name="Resetter" parent="zones/r_init" instance=ExtResource("9_4n4pe")]
position = Vector2(627, 1043)

[node name="Resetter2" parent="zones/r_init" instance=ExtResource("9_4n4pe")]
position = Vector2(223, 486)

[node name="eco" parent="zones/r_init" instance=ExtResource("11_akcor")]
position = Vector2(336, 755)
first = true

[node name="eco2" parent="zones/r_init" instance=ExtResource("11_akcor")]
position = Vector2(893, 330)
first = true

[node name="endLevel" parent="zones/r_init" instance=ExtResource("12_uidn5")]
redirectLevel = "res://levels/level4/level4.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="zones/r_init/endLevel"]
position = Vector2(344.5, 91)
shape = SubResource("RectangleShape2D_0ccd2")

[node name="controller" type="Node2D" parent="zones/r_init"]
script = ExtResource("11_wb6vj")

[node name="btnDoor" parent="zones/r_init/controller" instance=ExtResource("10_104y3")]
position = Vector2(1131, 464)

[node name="btnSlider" parent="zones/r_init/controller" instance=ExtResource("10_104y3")]
position = Vector2(173, 875)

[node name="door" parent="zones/r_init/controller" instance=ExtResource("13_ykpoe")]
z_index = 2
position = Vector2(251, -56)

[node name="sliderDoor" parent="zones/r_init/controller" instance=ExtResource("13_j38i6")]
position = Vector2(520, 280)

[node name="player" parent="." groups=["playerPro"] instance=ExtResource("15_33vvn")]
position = Vector2(1163, 911)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." groups=["music_node"]]
stream = ExtResource("16_a24u0")
volume_db = -5.0
autoplay = true

[connection signal="deleaseSignal" from="zones/r_init/controller/btnDoor" to="zones/r_init/controller" method="deleaseDoor"]
[connection signal="pressSignal" from="zones/r_init/controller/btnDoor" to="zones/r_init/controller" method="pressDoor"]
[connection signal="deleaseSignal" from="zones/r_init/controller/btnSlider" to="zones/r_init/controller" method="deleaseSlider"]
[connection signal="pressSignal" from="zones/r_init/controller/btnSlider" to="zones/r_init/controller" method="pressSlider"]
